--- a/aide.html
+++ b/aide.html
@@ -1,1 +1,11 @@
-<div>ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ChronoVitesse — Aide</title><link rel="stylesheet" href="styles.css"></head>
+<body><div class="container">
+<header><h1>❓ Aide — Protocoles & usage</h1><div class="actions"><a class="btn" href="index.html">🏠 Accueil</a></div></header>
+<div class="card"><div class="content">
+  <h2>Navette 20 m</h2><p>« Beep test / Léger‑Boucher » : bips à chaque 20 m, palier +0,5 km/h/min. VMA ≈ dernier palier tenu.</p>
+  <h2>45/15</h2><p>Intermittent 45 s travail / 15 s repos. À chaque nouveau palier, +0,5 km/h. VMA ≈ dernier palier tenu.</p>
+  <h2>Cooper / Demi‑Cooper</h2><p>12 ou 6 minutes. Vitesse moyenne = VMA estimée.</p>
+  <h2>VAMEVAL</h2><p>Vitesse progressive +0,5 km/h/min, bips 20 m. L’élève retient le dernier palier tenu = VMA.</p>
+</div></div>
+</div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div></body></html>
