--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<div>ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ChronoVitesse — Accueil</title><link rel="stylesheet" href="styles.css"></head>
+<body><div class="container" style="min-height:calc(100vh - 60px)">
+<div class="center" style="height:65vh; flex-direction:column; gap:18px">
+  <h1 style="font-size:56px">ChronoVitesse</h1>
+  <div class="actions">
+    <a class="btn big primary" href="eleve.html">🚀 Élève</a>
+    <a class="btn big" href="aide.html">❓ Aide</a>
+  </div>
+  <div class="actions">
+    <a class="btn big" href="classe.html">🧑‍🏫 Classe (Prof)</a>
+    <a class="btn big" href="prof-navette-20m.html">🎵 Navette 20 m (Prof)</a>
+    <a class="btn big" href="prof-45-15.html">⏱️ 45/15 (Prof)</a>
+    <a class="btn big" href="prof-minuteur.html">🕒 Cooper/Demi (Prof)</a>
+    <a class="btn big" href="vma-prof.html">🧬 Vameval (Prof)</a>
+  </div>
+</div></div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div></body></html>
