--- a/vameval-eleve.html
+++ b/vameval-eleve.html
@@ -1,1 +1,50 @@
-<div>ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Vameval (élève)</title><link rel="stylesheet" href="styles.css"></head>
+<body><div class="container">
+<header><h1>🧬 VAMEVAL — Élève</h1><div class="actions"><a class="btn" href="eleve.html">⬅️ Retour</a></div></header>
+<div class="card"><div class="content center" style="gap:18px;flex-direction:column">
+  <div class="timer" id="circle"><div class="center"><div class="time" id="palier">8.0</div><div class="hint">km/h (dernier palier tenu)</div></div></div>
+  <div class="actions"><button class="btn big" id="minus">−</button><span class="badge" id="val">8.0</span><button class="btn big" id="plus">+</button></div>
+  <div class="qrbox"><div id="qr"></div><div class="actions"><button class="btn ok" id="makeQR">🧾 QR</button><button class="btn primary" id="saveQR">⬇️ PNG</button></div></div>
+</div></div><div class="footer">ChronoVitesse - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+<script>
+const $ = (id)=>document.getElementById(id);
+function qs(key){ return new URLSearchParams(location.search).get(key)||''; }
+function identity(){ return { nom:qs('nom'), prenom:qs('prenom'), classe:qs('classe'), sexe:qs('sexe')||'M' }; }
+function payloadDistance({distance=0, tempsMs=0, vma=0}){
+  const hours = tempsMs>0 ? (tempsMs/3600000) : 0;
+  const vitesse = hours>0 ? (distance/1000)/hours : 0;
+  const id = identity();
+  return [{
+    nom:id.nom, prenom:id.prenom, classe:id.classe, sexe:id.sexe,
+    distance: Math.round(distance),
+    vitesse: Number(vitesse.toFixed(2)),
+    vma: Number((vma||0).toFixed(2))
+  }];
+}
+function showQR(boxId, dataArray){
+  const txt = JSON.stringify(dataArray);
+  const box = $(boxId); box.innerHTML='';
+  new QRCode(box, {text:txt, width:220, height:220}); return txt;
+}
+function downloadQR(boxId, name='qr-scanprof.png'){
+  const el=document.querySelector('#'+boxId+' canvas, #'+boxId+' img'); if(!el){ alert('Générer le QR d\'abord.'); return; }
+  let url; if(el.tagName.toLowerCase()==='canvas'){ url=el.toDataURL('image/png'); } else { const c=document.createElement('canvas'); c.width=el.naturalWidth; c.height=el.naturalHeight; c.getContext('2d').drawImage(el,0,0); url=c.toDataURL('image/png'); }
+  const a=document.createElement('a'); a.href=url; a.download=name; document.body.appendChild(a); a.click(); a.remove();
+}
+function setTimerCircle(elemId, pct){
+  const deg=Math.max(0,Math.min(100,pct))*3.6; const el=$(elemId); el.style.background=`conic-gradient(var(--accent) ${deg}deg, #e5e7eb ${deg}deg)`;
+}
+function formatMS(ms){ const m=Math.floor(ms/60000), s=Math.floor((ms%60000)/1000), z=Math.floor(ms%1000); return String(m).padStart(2,'0')+':'+String(s).padStart(2,'0')+'.'+String(z).padStart(3,'0'); }
+</script>
+
+<script>
+let v=8.0;
+function render(){ document.getElementById('palier').textContent=v.toFixed(1); document.getElementById('val').textContent=v.toFixed(1); setTimerCircle('circle',(v-8)/(24-8)*100); }
+document.getElementById('minus').onclick=()=>{ v=Math.max(6, v-0.5); render(); };
+document.getElementById('plus').onclick=()=>{ v=Math.min(24, v+0.5); render(); };
+document.getElementById('makeQR').onclick=()=>{ const id=identity(); const data=[{nom:id.nom, prenom:id.prenom, classe:id.classe, sexe:id.sexe, distance:0, vitesse:Number(v.toFixed(1)), vma:Number(v.toFixed(1))}]; const txt=showQR('qr', data); navigator.clipboard?.writeText(txt); };
+document.getElementById('saveQR').onclick=()=>downloadQR('qr');
+render();
+</script></body></html>
